@@ -128,6 +128,19 @@ name|lucene
 operator|.
 name|search
 operator|.
+name|DisjunctionMaxQuery
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|search
+operator|.
 name|PhraseQuery
 import|;
 end_import
@@ -427,6 +440,39 @@ name|clause
 operator|.
 name|getQuery
 argument_list|()
+argument_list|,
+name|flatQueries
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+elseif|else
+if|if
+condition|(
+name|sourceQuery
+operator|instanceof
+name|DisjunctionMaxQuery
+condition|)
+block|{
+name|DisjunctionMaxQuery
+name|dmq
+init|=
+operator|(
+name|DisjunctionMaxQuery
+operator|)
+name|sourceQuery
+decl_stmt|;
+for|for
+control|(
+name|Query
+name|query
+range|:
+name|dmq
+control|)
+block|{
+name|flatten
+argument_list|(
+name|query
 argument_list|,
 name|flatQueries
 argument_list|)
