@@ -295,6 +295,19 @@ name|lucene
 operator|.
 name|search
 operator|.
+name|DisjunctionMaxQuery
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|search
+operator|.
 name|PhraseQuery
 import|;
 end_import
@@ -851,6 +864,67 @@ argument_list|(
 name|slop
 argument_list|)
 expr_stmt|;
+return|return
+name|query
+return|;
+block|}
+DECL|method|dmq
+specifier|protected
+name|Query
+name|dmq
+parameter_list|(
+name|Query
+modifier|...
+name|queries
+parameter_list|)
+block|{
+return|return
+name|dmq
+argument_list|(
+literal|0.0F
+argument_list|,
+name|queries
+argument_list|)
+return|;
+block|}
+DECL|method|dmq
+specifier|protected
+name|Query
+name|dmq
+parameter_list|(
+name|float
+name|tieBreakerMultiplier
+parameter_list|,
+name|Query
+modifier|...
+name|queries
+parameter_list|)
+block|{
+name|DisjunctionMaxQuery
+name|query
+init|=
+operator|new
+name|DisjunctionMaxQuery
+argument_list|(
+name|tieBreakerMultiplier
+argument_list|)
+decl_stmt|;
+for|for
+control|(
+name|Query
+name|q
+range|:
+name|queries
+control|)
+block|{
+name|query
+operator|.
+name|add
+argument_list|(
+name|q
+argument_list|)
+expr_stmt|;
+block|}
 return|return
 name|query
 return|;
