@@ -218,6 +218,95 @@ argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
+DECL|method|testFlattenDisjunctionMaxQuery
+specifier|public
+name|void
+name|testFlattenDisjunctionMaxQuery
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|Query
+name|query
+init|=
+name|dmq
+argument_list|(
+name|tq
+argument_list|(
+literal|"A"
+argument_list|)
+argument_list|,
+name|tq
+argument_list|(
+literal|"B"
+argument_list|)
+argument_list|,
+name|pqF
+argument_list|(
+literal|"C"
+argument_list|,
+literal|"D"
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|FieldQuery
+name|fq
+init|=
+operator|new
+name|FieldQuery
+argument_list|(
+name|query
+argument_list|,
+literal|true
+argument_list|,
+literal|true
+argument_list|)
+decl_stmt|;
+name|Set
+argument_list|<
+name|Query
+argument_list|>
+name|flatQueries
+init|=
+operator|new
+name|HashSet
+argument_list|<
+name|Query
+argument_list|>
+argument_list|()
+decl_stmt|;
+name|fq
+operator|.
+name|flatten
+argument_list|(
+name|query
+argument_list|,
+name|flatQueries
+argument_list|)
+expr_stmt|;
+name|assertCollectionQueries
+argument_list|(
+name|flatQueries
+argument_list|,
+name|tq
+argument_list|(
+literal|"A"
+argument_list|)
+argument_list|,
+name|tq
+argument_list|(
+literal|"B"
+argument_list|)
+argument_list|,
+name|pqF
+argument_list|(
+literal|"C"
+argument_list|,
+literal|"D"
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
 DECL|method|testFlattenTermAndPhrase
 specifier|public
 name|void
